k8s/overlays/prod/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bloomlater-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/proxy-body-size: "10m"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "60"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - bloomlater.example.com
      secretName: bloomlater-tls
  rules:
    - host: bloomlater.example.com
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: prod-backend
                port:
                  number: 4000
          - path: /
            pathType: Prefix
            backend:
              service:
                name: prod-frontend
                port:
                  number: 80
